tests/negative/syntax/top_level_block.tx
// Description: Verify that top-level blocks are disallowed.
// Expected: COMPILE_ERROR

{
    print("Block");
}
